welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if Buggle estFaceMur() {
   ^Program:9: error: illegal start of simple expression
	}
        ^